nginx-ingress-controller-grpc-service-route53/helloworld/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-helloworld-server
spec:
  selector:
    matchLabels:
      app: grpc-helloworld-server
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-helloworld-server
    spec:
      containers:
      - name: grpc-helloworld-server
        image: "quay.io/woodsmur/grpc-examples-helloworld-server"
        # image: <aws account>.dkr.ecr.cn-northwest-1.amazonaws.com.cn/grpc-example/helloworld-server
        resources:
          limits:
            cpu: 64m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
