nginx-ingress-controller-grpc-service-route53/helloworld/yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-helloworld-server-service
  labels:
    app: grpc-helloworld-server
spec:
  type: ClusterIP
  selector:
    app: grpc-helloworld-server
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
    # protocol: TCP
